--- a/app/src/main/res/layout/fragment_ferst.xml
+++ b/app/src/main/res/layout/fragment_ferst.xml
@@ -12,29 +12,28 @@
             android:layout_width="341dp"
 
             android:layout_height="72dp"
+            android:layout_marginTop="448dp"
             android:fontFamily="@font/new_resource_file"
             android:gravity="center"
             android:text="Learn anytime and anywhere"
             android:textColor="#3C3A36"
             android:textSize="25sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.691" />
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/textView5"
             android:layout_width="341dp"
             android:layout_height="64dp"
+            android:layout_marginTop="544dp"
+            android:fontFamily="@font/new_resource_file"
             android:gravity="center"
             android:text="Quarantine is the perfect time to spend your
      day learning something new, from anywhere!"
-            android:fontFamily="@font/new_resource_file"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.831" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
 
@@ -48,6 +47,24 @@
             app:layout_constraintHorizontal_bias="0.517"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="17dp"
+            android:layout_marginTop="636dp"
+            android:layout_marginEnd="17dp"
+            android:backgroundTint="#FF5722"
+            android:fontFamily="@font/new_resource_file"
+            android:gravity="center"
+            android:text="Next"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
