--- a/app/src/main/res/layout/activity2.xml
+++ b/app/src/main/res/layout/activity2.xml
@@ -32,12 +32,14 @@
         android:layout_marginStart="17dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="17dp"
+        android:background="#00FFFFFF"
+        android:backgroundTint="@color/white"
         android:fontFamily="@font/new_resource_file"
-        android:gravity="right"
+        android:gravity="center"
         android:text="Skip"
+
         android:textColor="#78746D"
         android:textSize="18sp"
-        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
