--- a/app/src/main/res/layout/fragment__navigation_3_activity4.xml
+++ b/app/src/main/res/layout/fragment__navigation_3_activity4.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment_Navigation_3_activity4">
+    android:id="@+id/navigation3"
+    tools:context=".Fragment_Navigation_3_activity4"
+    >
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
