--- a/app/src/main/res/layout/fragment_navifation_1__activiti_4.xml
+++ b/app/src/main/res/layout/fragment_navifation_1__activiti_4.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/navigation1"
     android:background="#D4D5D5"
     tools:context=".Navifation_1_Activiti_4">
 
